# dl_lecture_competition_pub

./: .gitignore  custom_class_mapping.csv  main.py  pyproject.toml
